# Nar.Base

./: Basics.oak  Bitwise.oak  Char.oak  Debug.oak  Dict.oak  List.oak  Maybe.oak  Result.oak  String.oak  Tuple.oak  go.mod  go.sum  nar.json  oak.json
native/: !dumies.go  Basics.go  Bitwise.go  Char.go  Debug.go  List.go  String.go  accessories.go  go.mod
native/dll/: libNar.Base.100.dylib  libNar.Base.dylib
native/dll-src/: CMakeLists.txt  _package.c  _package.h  array.c  basics.c  bitwise.c  char.c  debug.c  list.c  math.c  native.c  native.h  string.c  utils.c  utils.h
native/dll-src/include/: Nar.Base.h
native/js/: index.js
src/: Array.nar  Array.oak  Basics.nar  Basics.oak  Bitwise.nar  Bitwise.oak  Char.nar  Char.oak  Debug.nar  Debug.oak  Dict.nar  Dict.oak  List.nar  List.oak  Math.nar  Math.oak  Maybe.nar  Maybe.oak  Queue.nar  Result.nar  Result.oak  Set.nar  Set.oak  String.nar  String.oak  Tuple.nar  Tuple.oak
src/hidden/: NativeArray.nar  NativeArray.oak
tests/: nar.json  oak.json
tests/src/: Main.nar  Main.oak
tests/src/Tests/: Array.nar  Array.oak  Basics.nar  Basics.oak  Bitwise.nar  Bitwise.oak  Char.nar  Char.oak  Debug.nar  Debug.oak  Dict.nar  Dict.oak  Equality.nar  Equality.oak  List.nar  List.oak  Math.nar  Math.oak  Maybe.nar  Maybe.oak  Result.nar  Result.oak  Set.nar  Set.oak  String.nar  String.oak  Tuple.nar  Tuple.oak  todo
